<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.randatic.collegeapp.Presenter.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:id="@+id/login_editText_email"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/login_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="125dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/login_editText_password"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/login_editText_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/log_In"
        android:id="@+id/login_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_In"
        android:id="@+id/login_button_login"
        android:layout_below="@+id/login_editText_password"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/login_button_forgot_password"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/login_button_login"
        android:layout_toStartOf="@+id/login_button_login"/>

    <Button
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/login_button_create_account"
        android:layout_alignBottom="@+id/login_button_forgot_password"
        android:layout_toRightOf="@+id/login_button_login"
        android:layout_toEndOf="@+id/login_button_login" />

</RelativeLayout>
